--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@next/font": "^14.1.0",
     "firebase": "^10.8.0",
+    "helmet": "^7.1.0",
     "next": "14.1.0",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-dom": "^18",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-helmet": "^6.1.11",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
